Fixing scripted tests